# opencl-libsvm

./: Makefile  Makefile.am  Makefile.save  ProjectHome.md  README  make  svm-predict.c  svm.cpp  svm.h  types.h
gpuImplementations/OpenCLLibsvmVersionMultiKernel/: GPUKernelCalculation.cl  GPUKernelCalculationPredict.cl  Makefile  OpenCLKernel.cpp  OpenCLKernel.hpp  OpenCLKernelPredict.cpp  OpenCLKernelPredict.hpp
gpuImplementations/OpenCLgeneral/: OpenCLGeneral.cpp  OpenCLGeneral.hpp
python/: README
